[Format][C][Java] Consolidate ExecuteQuery/ExecuteUpdate (#95)